# VNPT-AI-HACKATHON-TRACK-2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  predict.py  pyproject.toml  requirements.txt  setup_qdrant.py
output/: class.csv
src/: answer_selector_agent.py  main.py  router_agent.py  usage.json
src/agents/: knowledge_agent.py  logic_agent.py  math.py  router_agent.py  sensitive.py  sensitive_agent.py
src/config/: config.yaml
src/core/: config.py  vnpt_adk_model.py  vnpt_client.py
src/tools/: knowledge_tool.py  logic_tool.py  retrieval_tool.py  sensitive_tool.py
src/utils/: io.py  llm.py  logging.py  prompting.py
src_test/utils/: config_loader.py
